lib/stringify-extra/tests/ui/stringify_ty/unknown_generic.stderr
error[E0107]: missing generics for enum `Option`
 --> tests/ui/stringify_ty/unknown_generic.rs:4:19
  |
4 |     stringify_ty!(Option);
  |                   ^^^^^^ expected 1 generic argument
  |
note: enum defined here, with 1 generic parameter: `T`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^ -
help: add missing generic argument
  |
4 |     stringify_ty!(Option<T>);
  |                         +++
